made save button invisible until functionality is fixed

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -93,7 +93,7 @@ img {
 
 #savetest p {
   margin-top: -30px;
-  display: inline-block;
+  display: none;
   align-content: right !important;
   text-align: right!important;
   float: right !important;
